// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "no-1": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-0": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "no-1": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 5,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 2`] = `
{
  "2": {
    "className": "AtomInstance",
    "observers": {
      "no-3": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-2": {
    "className": "SelectorInstance",
    "observers": {
      "2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 2,
  },
  "no-3": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "2": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 7,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 3`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "no-4": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "2": {
    "className": "AtomInstance",
    "observers": {
      "no-3": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-0": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "@@selector-common-name-2": {
    "className": "SelectorInstance",
    "observers": {
      "2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 2,
  },
  "no-3": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "2": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 7,
  },
  "no-4": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 8,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
      "@@selector-common-name-2": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 4`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "no-4": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-0": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "select",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "no-4": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "1": {
        "createdAt": 123456789,
        "flags": 3,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 8,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-0": {
        "createdAt": 123456789,
        "flags": 0,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;
